# Agentic_SPC

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: alarm_validation_agent.py  arl_analysis.py  audit_ledger.py  config.py  contextual_reasoning_agent.py  dashboard.py  data_generator.py  data_quality_agent.py  decision_agent.py  governance_agent.py  manufacturing_reference.py  manuscript_profile.py  reporting.py  risk_adjustment.py  spc_monitoring_agent.py  stress_testing.py
docs/: GITHUB_PUBLISHING.md  MANUSCRIPT_RESULTS.md
figures/: README.md  figure_1_evolution.mmd  figure_2_reference_architecture.mmd  figure_3_closed_loop_workflow.mmd  figure_5_validation_pathway.mmd
scripts/: render_mermaid_figures.sh  run_arl_simulation.py  verify_expected_results.py
tests/: test_arl_analysis.py  test_audit_ledger.py  test_data_quality.py  test_governance.py  test_manufacturing_reference.py  test_manuscript_profile.py  test_risk_adjusted_spc.py  test_stress_testing.py
